
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Ensure Resource pages using RTEs always have save btn enabled
- Fixes to RTE loading in Element panes, other issues regarding timing of plugin firing
- Fixed bug with area listings in combo in system settings
- [#MODX-1961] Fixed bug with octal perms when creating directories in the admin
- [#MODX-1527] Fixed bugs in admin confirm password field on install
- Fixed Package Management in IE8
- Styling improvements
- Fixed IE issue on navbar, few other tweaks to package management for IE
- [#MODX-2032] Fixed topic varchar length issue with UTF-8 installs
- [#MODX-1612] Added Create Menu context menu on root node for menus tree
- [#MODX-2020] Ensure error when creating duplicate context ACLs shows
- Tweaks to Package Management browser JS to allow for more consistent rendering
- [#MODX-2051] Stripped tags from TV description field on input rendering
- Added 'custom_resource_classes' setting, which allows you to specify custom resource types for the resource tree
- Tweaked FC tvMove rule to be more consistent with values of other TV FC rules
- Allow blank names (not keys) in Settings create/update windows; tweaks to query in package management grid
- [#MODX-1737] Container resources can now have names specified on duplicate
- [#MODX-2074] Fixed bug where property descriptions were not i18n-able
- [#MODX-2062] Date TV type now can store time; updated datetime ExtJS xtype to latest version
- [#MODX-2046] Added 'collapse' toggle to left trees, shortened username on top right to allow for small resolutions
- [#MODX-2067] Fixed bug with cleanAlias and a non-existent lexicon string
- [#MODX-2086] Fixed a few bugs in package management styling
- Tweaks to context menu styling