@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-2090] Added auto_check_pkg_updates_cache_expire setting, which caches package update checks in Package Management to speed up grid load times
 - Ensure Resource pages using RTEs always have save btn enabled
 - Fixes to RTE loading in Element panes, other issues regarding timing of plugin firing
 - Fixed bug with area listings in combo in system settings
